[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Instances/Actors/UI/ChatUI.gd" type="Script" id=1]

[node name="Chat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 400 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
Player_InView_Color = Color( 1, 0.203922, 0.203922, 1 )
OOC_Color = Color( 0.176471, 0.588235, 1, 1 )
NPC_Color = Color( 0.945098, 0.611765, 0, 1 )
Event_Color = Color( 0.290196, 0.776471, 0.560784, 1 )
System_Color = Color( 0.8, 0.396078, 0.996078, 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.0431373, 0.0431373, 0.231373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Background/VBoxContainer"]
margin_top = 656.0
margin_right = 1280.0
margin_bottom = 677.0
focus_mode = 2
bbcode_enabled = true
fit_content_height = true
scroll_following = true
selection_enabled = true

[node name="Write" type="Control" parent="Background/VBoxContainer"]
margin_top = 680.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/Write"]
margin_top = 10.0
margin_right = 413.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SayOption" type="OptionButton" parent="Background/VBoxContainer/Write/HBoxContainer"]
margin_right = 65.0
margin_bottom = 30.0
rect_min_size = Vector2( 65, 30 )

[node name="LineEdit" type="LineEdit" parent="Background/VBoxContainer/Write/HBoxContainer"]
margin_left = 68.0
margin_right = 398.0
margin_bottom = 30.0
rect_min_size = Vector2( 330, 30 )
placeholder_text = "Enter what you'd like to say here."

[node name="T" type="Node" parent="."]

[node name="T_Background" type="Tween" parent="T"]

[node name="T_Text" type="Tween" parent="T"]

[node name="T_ShowAndHideTime" type="Timer" parent="T"]
wait_time = 6.0
one_shot = true
autostart = true

[node name="T_Text2" type="Timer" parent="T"]
wait_time = 6.0
one_shot = true
autostart = true
[connection signal="mouse_entered" from="Background" to="." method="_on_Background_mouse_entered"]
[connection signal="item_selected" from="Background/VBoxContainer/Write/HBoxContainer/SayOption" to="." method="_on_SayOption_item_selected"]
[connection signal="focus_entered" from="Background/VBoxContainer/Write/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="Background/VBoxContainer/Write/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="Background/VBoxContainer/Write/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="timeout" from="T/T_ShowAndHideTime" to="." method="_on_T_ShowAndHideTime_timeout"]
[connection signal="timeout" from="T/T_Text2" to="." method="_on_T_Text2_timeout"]
